--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teredo-vite-react",
+  "name": "webgl-lab",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,27 +15,18 @@
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.0.12",
-    "axios": "^1.8.4",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "formik": "^2.4.6",
-    "immer": "^10.1.1",
     "lucide-react": "^0.475.0",
-    "memoizee": "^0.4.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@types/memoizee": "^0.4.12",
     "@types/node": "^22.7.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
